section découvrez nos cours

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600;800;900&family=Inter:wght@900&display=swap"
-            rel="stylesheet"
-        />
+        <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600;800;900&family=Inter:wght@900&display=swap" rel="stylesheet" />
         <title>Riding Cities</title>
     </head>
     <body>
@@ -56,9 +53,9 @@
                         </article>
                     </div>
                 </section>
-                <section class="whiteContentSection sectionLinearGradientBackground textCenter">
+                <section class="whiteContentSection sectionLinearGradientBackground">
                     <h2>Les membres fondateurs</h2>
-                    <div class="directionRow">
+                    <div class="directionRow textCenter">
                         <article>
                             <img src="images/soraya.png" alt="soraya" />
                             <h3>Soraya</h3>
@@ -76,11 +73,11 @@
                         </article>
                     </div>
                 </section>
-                <section>
-                    <div class="directionRow">
-                        <a class="button buttonDrakGreyColor" href="documents/planning"
-                            >Télécharger le planning de cours</a
-                        >
+                <section class="sectionLightGreyBackground">
+                    <h2>Découvrez nos cours</h2>
+                    <div class="directionColumn">
+                        <a class="button buttonMainColor buttonRounded buttonHighlight" href="documents/planning-adultes.pdf">Télécharger le planning de cours pour adultes</a>
+                        <a class="button buttonSecondColor buttonRounded buttonHighlight" href="documents/planning-enfants.pdf">Télécharger le planning de cours pour enfants</a>
                     </div>
                 </section>
             </main>
