--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600;800;900&family=Inter:wght@900&display=swap" rel="stylesheet" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600;800;900&family=Inter:wght@900&display=swap" rel="stylesheet">
         <title>Riding Cities</title>
     </head>
     <body>
         <div class="container">
             <header>
-                <img src="images/header.png" alt="skateboard sur un sol goudronné" />
+                <img src="images/header.png" alt="Skateboard sur un sol goudronné">
                 <div class="headerTextContent">
                     <h1>RIDING CITIES</h1>
                 </div>
@@ -43,17 +43,17 @@
                     <h2>Les membres fondateurs</h2>
                     <div class="directionRow textCenter">
                         <article>
-                            <img src="images/soraya.png" alt="soraya" />
+                            <img src="images/soraya.png" alt="Soraya">
                             <h3>Soraya</h3>
                             <p>Longboard</p>
                         </article>
                         <article>
-                            <img src="images/marc.png" alt="marc" />
+                            <img src="images/marc.png" alt="Marc">
                             <h3>Marc</h3>
                             <p>Street</p>
                         </article>
                         <article>
-                            <img src="images/pedro.png" alt="pedro" />
+                            <img src="images/pedro.png" alt="Pedro">
                             <h3>Pedro</h3>
                             <p>Pool</p>
                         </article>
